Head - Change getConstantValue() implementation